--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -1938,6 +1938,9 @@
     position: relative;
     justify-content: center;
   }
+  ul.ruby-menu>li.ruby-menu-mega-shop>div>ul>li>a{
+    padding: 20px 6px;
+  }
 }
 
 @media only screen and (max-width: 1024px) {
