--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -2111,6 +2111,10 @@
     height: 400px;
     padding-top: 60px;
   }
+
+  .testimonials-area .testimonials-item {
+    height: fit-content;
+  }
 }
 
 // small laptops
